--- a/scripts/redis-slave.conf.templ
+++ b/scripts/redis-slave.conf.templ
@@ -2,11 +2,13 @@ port {}
 # disable disk snapshot
 save ""
 daemonize yes
+stop-writes-on-bgsave-error no
 loglevel notice
 logfile log-{}
 pidfile pid
 repl-diskless-sync yes
 repl-diskless-sync-delay 0
+repl-backlog-size 100mb
 bind {} 127.0.0.1
 protected-mode no
 io-threads 2
